--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=5,IE=9" ><![endif]-->
 <!DOCTYPE html>
 <html>
+<link rel="icon" type="image/png" sizes="48x48" href="favicon.png">
 <head>
-<title>THRSTRAP.drawio.html</title>
+<title>THRSTRAP Stack</title>
 <meta charset="utf-8"/>
 </head>
 <body>
