--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>index.html</title>
+    <link rel="icon" type="image/png" sizes="36x36" href="favicon.png" />
+    <title>THRSTRAP Stack</title>
     <meta charset="utf-8" />
   </head>
   <body>
