--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="icon" type="image/png" sizes="48x48" href="favicon.png" />
-    <title>THRSTRAP Stack</title>
+    <title>https://arma Stack</title>
     <meta charset="utf-8" />
   </head>
   <body>
